# Legacy_Lift

./: README.md
LegacyLift_Ai_Engine/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.ipynb
LegacyLift_Ai_Engine/parsing/analyzers/: ast_parser.py  dependency_mapper.py  test_ast_parser.py
LegacyLift_Ai_Engine/parsing/api/: main.py
LegacyLift_Ai_Engine/parsing/api/routes/: index.py  parse.py  query.py
LegacyLift_Ai_Engine/parsing/api/services/: parse_service.py  rag_service.py
LegacyLift_Ai_Engine/parsing/config/: settings.py
LegacyLift_Ai_Engine/parsing/core/: orchestrator.py  parser.py  scanner.py  test_scanner.py  zip_handler.py
LegacyLift_Ai_Engine/parsing/execution_engine/comparator/: output_comparator.py  test_output_comparator.py
LegacyLift_Ai_Engine/parsing/execution_engine/executor/: execution_manager.py
LegacyLift_Ai_Engine/parsing/execution_engine/runner/: java_runner.py  python_runner.py  test_java_runner.py  test_python_runner.py
LegacyLift_Ai_Engine/parsing/execution_engine/sandbox/: docker_manager.py  resource_limiter.py  temp_workspace.py  test_temp_workspace.py
LegacyLift_Ai_Engine/parsing/execution_engine/test_handler/: test_injector.py  test_test_injector.py
LegacyLift_Ai_Engine/parsing/execution_engine/validator/: test_validation_engine.py  validation_engine.py
LegacyLift_Ai_Engine/parsing/metrics/analyzer/: improvement_analyzer.py  (+1 more)
LegacyLift_Ai_Engine/parsing/models/: schema.py
LegacyLift_Ai_Engine/parsing/utils/: file_utils.py  file_writer.py  logger.py  path_utils.py  validator.py
(+95 files in other folders)
