[project]
name = "legacylift-ai-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autopep8>=2.3.2",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.0",
    "google-generativeai>=0.8.6",
    "groq>=1.2.0",
    "ipykernel>=7.2.0",
    "javalang>=0.13.0",
    "langchain>=1.2.15",
    "langgraph>=1.1.9",
    "openai>=2.32.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "sentence-transformers>=5.4.1",
    "uvicorn>=0.46.0",
]
